2006-02-01  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicButtonUI/defaultTextIconGap.java
	(test): Updated expected results and test tag to JDK1.5.

2006-02-01  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/table/DefaultTableCellRenderer/getTableCellRendererComponent.java: New test.

2006-02-01  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/border/TitledBorder/constructors.java
	(test): Set known look and feel and theme.

2006-02-01  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/getActionMap.java:
	Removed,
	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/getMinimumSize.java
	(test): Set theme and removed fixed size test,
	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/getActionMap.java
	(test): Likewise.

2006-02-01  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicScrollBarUI/installDefaults.java:
	(testIncrButton): Fixed to test the JDK1.5 behaviour, which is
	to not install any button in the installDefaults method.
	(testDecrButton): Fixed to test the JDK1.5 behaviour, which is
	to not install any button in the installDefaults method.
	* gnu/testlet/javax/swing/plaf/basic/BasicScrollBarUI/installComponents.java:
	New test. Checks if the ScrollBar buttons are created here.
	* gnu/testlet/javax/swing/plaf/basic/BasicScrollBarUI/MyBasicScrollBarUI.java:
	Added installComponents() method to make protected method visible.

2006-02-01  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JLayeredPane/addImpl.java
	(testAddZeroPosition): New test.

2006-02-01  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxEditor/constructor.java
	(test): Set DefaultMetalTheme and use correct insets,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxEditor/editorBorderInsets.java
	(test): Likewise,