@@ -1,5 +1,10 @@
 2006-02-01  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/getPreferredSize.java
+	(testEditable): Removed System.out.println() and modified expected result for one check.
+
+2006-02-01  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* gnu/testlet/javax/swing/plaf/basic/BasicButtonUI/defaultTextIconGap.java
 	(test): Updated expected results and test tag to JDK1.5.
 
